--- a/intro_to_pandas.ipynb
+++ b/intro_to_pandas.ipynb
@@ -463,7 +463,9 @@
       },
       "cell_type": "code",
       "source": [
-        "# Your code here"
+        "# Your code here\n",
+        "cities['required'] = (cities['Area square miles'] > 50) & cities['City name'].apply(lambda name: name.startswith('San'))\n",
+        "cities"
       ],
       "execution_count": 0,
       "outputs": []
@@ -610,7 +612,8 @@
       },
       "cell_type": "code",
       "source": [
-        "# Your code here"
+        "# Your code here\n",
+        "cities.reindex([7, 0, 3, 6, 5, 4, 2, 1])"
       ],
       "execution_count": 0,
       "outputs": []
